// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils load consuming the configuration should read and parse the configuration file 1`] = `
{
  "overrides": {
    "environment": {
      "BizModule": {
        "ENV_VAR_A": "New value for ENV_VAR_A",
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "url": "http://localhost:4040",
    },
    "TestModule/Bar": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "url": "\${APPS_TEST_URL}",
    },
    "TestModule/Foo": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;

exports[`utils load consuming the configuration should read and parse the configuration file 2`] = `
{
  "overrides": {
    "environment": {
      "BizModule": {
        "ENV_VAR_A": "New value for ENV_VAR_A",
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "url": "http://localhost:4040",
    },
    "TestModule/Bar": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "url": "\${APPS_TEST_URL}",
    },
    "TestModule/Foo": {
      "filename": "remoteEntry.js",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "url": "\${APPS_TEST_URL}",
    },
  },
}
`;

exports[`utils merge appshell configs should merge multiple valid configurations 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "Biz env",
      "RUNTIME_ENV_VERSION": "Biz version",
    },
    "test_module_bar": {
      "RUNTIME_ENV": "Test env",
      "RUNTIME_ENV_VERSION": "Test version",
    },
    "test_module_foo": {
      "RUNTIME_ENV": "Foo env",
      "RUNTIME_ENV_VERSION": "Foo version",
    },
  },
  "modules": {
    "BizModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "BizModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleBar": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleFoo": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "BizModule",
    },
    "TestModuleBar/Bar": {
      "id": "TestModule/Bar",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "module": "./Bar",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "TestModule",
    },
    "TestModuleFoo/Foo": {
      "id": "TestModule/Foo",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Foo",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "TestModule",
    },
  },
}
`;

exports[`utils merge should merge manifests from right to left with merge validator 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "Biz env",
      "RUNTIME_ENV_VERSION": "Biz version",
    },
    "test_module_a": {
      "RUNTIME_ENV": "A env",
      "RUNTIME_ENV_VERSION": "A version",
    },
    "test_module_b": {
      "RUNTIME_ENV": "B env",
      "RUNTIME_ENV_VERSION": "B version",
    },
    "test_module_c": {
      "RUNTIME_ENV": "C env",
      "RUNTIME_ENV_VERSION": "C version",
    },
  },
  "modules": {
    "TestModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleA": {
      "exposes": {
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleC": {
      "exposes": {
        "./Bang": "./src/Entry3",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "overrides": {
    "environment": {
      "test_module_a": {
        "RUNTIME_ENV": "A env override",
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "BizModule",
    },
    "TestModuleA/Foo": {
      "id": "TestModuleA/Foo",
      "manifestUrl": "http://localhost:8080/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Foo",
      "remoteEntryUrl": "http://localhost:8080/remoteEntry.js",
      "scope": "TestModuleA",
    },
    "TestModuleB/Bar": {
      "id": "TestModuleB/Bar",
      "manifestUrl": "http://localhost:8080/bar/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Bar",
      "remoteEntryUrl": "http://localhost:8080/bar/remoteEntry.js",
      "scope": "TestModuleB",
    },
    "TestModuleB/Foo": {
      "id": "TestModuleB/Foo",
      "manifestUrl": "http://localhost:8080/foo/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 20,
        "route": "/foo",
      },
      "module": "./Foo",
      "remoteEntryUrl": "http://localhost:8080/foo/remoteEntry.js",
      "scope": "TestModuleB",
    },
    "TestModuleC/Foo": {
      "id": "TestModuleC/Foo",
      "manifestUrl": "http://localhost:8080/foo_c/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 30,
        "route": "/foo_c",
      },
      "module": "./Foo",
      "remoteEntryUrl": "http://localhost:8080/foo_c/remoteEntry.js",
      "scope": "TestModuleC",
    },
  },
}
`;

exports[`utils merge should merge multiple valid configurations 1`] = `
{
  "environment": {
    "biz_module": {
      "RUNTIME_ENV": "Biz env",
      "RUNTIME_ENV_VERSION": "Biz version",
    },
    "test_module_bar": {
      "RUNTIME_ENV": "Test env",
      "RUNTIME_ENV_VERSION": "Test version",
    },
    "test_module_foo": {
      "RUNTIME_ENV": "Foo env",
      "RUNTIME_ENV_VERSION": "Foo version",
    },
  },
  "modules": {
    "BizModule": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "BizModule",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleBar": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
    "TestModuleFoo": {
      "exposes": {
        "./Bar": "./src/Entry2",
        "./Foo": "./src/Entry1",
      },
      "filename": "remoteEntry.js",
      "library": {
        "name": "some shared lib",
        "type": "umd",
      },
      "name": "TestModuleBar",
      "remoteType": "amd",
      "remotes": {
        "./Remote1": {
          "external": "external module",
          "shareScope": "@shared",
        },
      },
      "runtime": "runtimeChunk",
      "shareScope": "@sharedscope",
      "shared": {
        "package1": {
          "requiredVersion": "0.1.0",
          "singleton": true,
        },
        "package2": {
          "requiredVersion": "1.1.0",
          "singleton": true,
        },
      },
    },
  },
  "remotes": {
    "BizModule/Biz": {
      "id": "BizModule/Biz",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "auxiliary",
        "displayName": "Biz App",
        "icon": "ViewList",
        "order": 30,
        "route": "/biz",
      },
      "module": "./Biz",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "BizModule",
    },
    "TestModuleBar/Bar": {
      "id": "TestModule/Bar",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Bar App",
        "icon": "ViewList",
        "order": 20,
        "route": "/bar",
      },
      "module": "./Bar",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "TestModule",
    },
    "TestModuleFoo/Foo": {
      "id": "TestModule/Foo",
      "manifestUrl": "http://localhost:4040/appshell.manifest.json",
      "metadata": {
        "displayGroup": "main",
        "displayName": "Foo App",
        "icon": "ViewList",
        "order": 10,
        "route": "/foo",
      },
      "module": "./Foo",
      "remoteEntryUrl": "http://localhost:4040/remoteEntry.js",
      "scope": "TestModule",
    },
  },
}
`;
